--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,28 @@
 .App {
-  text-align: center;
+  position: relative;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.videoWrapper {
+
+  opacity: 0.9;
+  width: auto;
+  height: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.image {
+  position: absolute;
+  right: 0;
+  width: 1440px;
+  height: 900px;
+}
+
+.video {
+  position: absolute;
+  right: 0;
+  top:0;
+  width: 790px;
+  height: 724px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  align-items: center;
 }
